--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=ApiJava
 server.port=4000
-spring.datasource.url=jdbc:mysql://localhost:3306/cursosdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cursosdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=fca.00
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
